image and html upload, baseline html

--- a/index.html
+++ b/index.html
@@ -6,29 +6,133 @@
 		<title>Innovation Identity</title>
 	</head>
 
+	<header>
+		<h1>
+			Innovation Identity
+		</h1>
+	</header>
+
 	<body>
-		<header>
-			<h1>
-				Innovation Identity
-			</h1>
-		</header>
 		<div class="main">
-			<div class="personal_id">
-				<img src="" alt="your_image">
+
+			<div id="personal_id">
+				<img src="images/profile_pic.gif" alt="Profile Picture">
 				<h1>Ed De Mott</h1>
 				<h3>Developer</h3>
 				<p>edward.de-mott@capgemini.com</p>
 				<p>07810884120</p>
-				<a href="" class="foundicon-facebook"></a>
+				<a href="" class="facebook"></a>
 				<a href="" class="twitter"></a>
 				<a href="" class="google"></a>
 				<a href="" class="linked_in"></a>
 			</div>
+
+			<div id="hobbies">
+				<p>Hobbies/Interests</p>
+				<ul>
+					<li>Hobby A</li>
+					<li>Hobby B</li>
+					<li>Hobby C</li>
+					<li>Hobby D</li>
+				</ul>
+			</div>
+
+			<div id="video">
+				<p>Favourite Video</p>
+				<video width="640" height="360" controls>
+					<source src="//www.youtube.com/embed/nGeKSiCQkPw?feature=player_detailpage"/>
+				</video>
+			</div>
+
+			<div id="background">
+				<h2>Background</h2>
+				<form action="">
+					<ul>
+						<li><input type="checkbox" name="languages" value="HTML"></li>
+						<li><label for="HTML">HTML</label></li>
+						<li><input type="checkbox" name="languages" value="JavaScript"></li>
+						<li><label for="JavaScript">JavaScript</label></li>
+						<li><input type="checkbox" name="languages" value="Python"></li>
+						<li><label for="Python">Python</label></li>
+						<li><input type="checkbox" name="languages" value="Java"></li>
+						<li><label for="Java">Java</label></li>
+					</ul>
+					<ul>
+						<li><input type="checkbox" name="languages" value="CSS"></li>
+						<li><label for="CSS">CSS</label></li>
+						<li><input type="checkbox" name="languages" value="PHP"></li>
+						<li><label for="PHP">PHP</label></li>
+						<li><input type="checkbox" name="languages" value="SQL"></li>
+						<li><label for="SQL">SQL</label></li>
+						<li><input type="checkbox" name="languages" value="C++"></li>
+						<li><label for="C++">C++</label></li>
+					</ul>
+					<textarea rows="4" cols="50">Tell us about one of your past projects...</textarea>
+					<input class="button" type="submit" value="OK">
+				</form>
+			</div>
+
+			<div id="joke">
+				<blockquote>
+					Tell us a funny joke or interesting ting about yourself.
+				</blockquote>
+			</div>
+
+			<div id="colleague_1">
+				<img src="images/colleague_1.gif" alt="Profile Picture">
+				<h1>Colleague 1</h1>
+				<h3>Job Title</h3>
+				<p>email@capgemini.com</p>
+				<p>Telephone</p>
+				<a href="" class="facebook"></a>
+				<a href="" class="twitter"></a>
+				<a href="" class="google"></a>
+				<a href="" class="linked_in"></a>
+			</div>
+
+			<div id="colleague_2">
+				<img src="images/colleague_2.gif" alt="Profile Picture">
+				<h1>Colleague 2</h1>
+				<h3>Job Title</h3>
+				<p>email@capgemini.com</p>
+				<p>Telephone</p>
+				<a href="" class="facebook"></a>
+				<a href="" class="twitter"></a>
+				<a href="" class="google"></a>
+				<a href="" class="linked_in"></a>
+			</div>
+
+			<div id="colleague_3">
+				<img src="images/colleague_3.gif" alt="Profile Picture">
+				<h1>Colleague 3</h1>
+				<h3>Job Title</h3>
+				<p>email@capgemini.com</p>
+				<p>Telephone</p>
+				<a href="" class="facebook"></a>
+				<a href="" class="twitter"></a>
+				<a href="" class="google"></a>
+				<a href="" class="linked_in"></a>
+			</div>
+
+			<div id="colleague_3">
+				<img src="images/colleague_3.gif" alt="Profile Picture">
+				<h1>Colleague 3</h1>
+				<h3>Job Title</h3>
+				<p>email@capgemini.com</p>
+				<p>Telephone</p>
+				<a href="" class="facebook"></a>
+				<a href="" class="twitter"></a>
+				<a href="" class="google"></a>
+				<a href="" class="linked_in"></a>
+			</div>
+
 		</div>
+
 		<footer>
 			<p>
 				Created by Ed De Mott
 			</p>
 		</footer>
+
 	</body>
 </html>
