quote now centered and 5th colleague added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="joke">
         <p>
           <i class="fa fa-quote-left"></i>
-          What happens when an unstoppable force meets an immovable object
+            What happens when an unstoppable force meets an immovable object
           <i class="fa fa-quote-right"></i>
         </p>
       </div>
@@ -133,6 +133,18 @@
       <div class="colleague">
         <img src="images/colleague_4.gif" alt="Profile Picture">
         <h1>Colleague 4</h1>
+        <h3>Job Title</h3>
+        <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
+        <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
+        <a href="" class="facebook"></a>
+        <a href="" class="twitter"></a>
+        <a href="" class="google"></a>
+        <a href="" class="linked_in"></a>
+      </div>
+
+      <div class="colleague">
+        <img src="images/colleague_4.gif" alt="Profile Picture">
+        <h1>Colleague 5</h1>
         <h3>Job Title</h3>
         <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
         <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
