--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,13 +20,22 @@
         <img src="images/profile_pic.gif" alt="Profile Picture"/>
         <h1>Ed De Mott</h1>
         <h3>Developer</h3>
-        <p class="mail"><i class="fa fa-envelope"></i>edward.de-mott@capgemini.com</p>
+        <p class="mail">
+          <a href="mailto:edward.de-mott@capgemini.com"><i class="fa fa-envelope"></i>edward.de-mott@capgemini.com</a> 
+        </p>
         <p class="phone"><i class="fa fa-phone"></i>07810884120</p>
-        <a href="http://www.facebook.com" class="facebook"></a>
-        <a href="http://www.twitter.com" class="twitter"></a>
-        <a href="https://plus.google.com" class="google"></a>
-        <a href="http://www.linkedin.co.uk" class="linked_in"></a>
-        <br>
+        <div class="facebook">
+          <a href="http://www.facebook.com"></a>
+        </div>
+        <div class="twitter">
+          <a href="http://www.twitter.com"></a>
+        </div>
+        <div class="google">
+          <a href="https://plus.google.com"></a>
+        </div>
+        <div class="linked_in">
+          <a href="http://www.linkedin.co.uk"></a>
+        </div>
       </div>
       <div class="back_g">
         <div class="hobbies">
@@ -101,60 +107,110 @@
         <img src="images/colleague_1.gif" alt="Profile Picture">
         <h1>Colleague 1</h1>
         <h3>Job Title</h3>
-        <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
-        <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
-        <a href="" class="facebook"></a>
-        <a href="" class="twitter"></a>
-        <a href="" class="google"></a>
-        <a href="" class="linked_in"></a>
+        <p class="mail">
+          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+        </p>
+        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+        <div class="facebook">
+          <a href="http://www.facebook.com"></a>
+        </div>
+        <div class="twitter">
+          <a href="http://www.twitter.com"></a>
+        </div>
+        <div class="google">
+          <a href="https://plus.google.com"></a>
+        </div>
+        <div class="linked_in">
+          <a href="http://www.linkedin.co.uk"></a>
+        </div>
       </div>
 
       <div class="colleague">
         <img src="images/colleague_2.gif" alt="Profile Picture">
         <h1>Colleague 2</h1>
         <h3>Job Title</h3>
-        <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
-        <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
-        <a href="" class="facebook"></a>
-        <a href="" class="twitter"></a>
-        <a href="" class="google"></a>
-        <a href="" class="linked_in"></a>
+        <p class="mail">
+          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+        </p>
+        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+        <div class="facebook">
+          <a href="http://www.facebook.com"></a>
+        </div>
+        <div class="twitter">
+          <a href="http://www.twitter.com"></a>
+        </div>
+        <div class="google">
+          <a href="https://plus.google.com"></a>
+        </div>
+        <div class="linked_in">
+          <a href="http://www.linkedin.co.uk"></a>
+        </div>
       </div>
 
       <div class="colleague">
         <img src="images/colleague_3.gif" alt="Profile Picture">
         <h1>Colleague 3</h1>
         <h3>Job Title</h3>
-        <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
-        <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
-        <a href="" class="facebook"></a>
-        <a href="" class="twitter"></a>
-        <a href="" class="google"></a>
-        <a href="" class="linked_in"></a>
+        <p class="mail">
+          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+        </p>
+        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+        <div class="facebook">
+          <a href="http://www.facebook.com"></a>
+        </div>
+        <div class="twitter">
+          <a href="http://www.twitter.com"></a>
+        </div>
+        <div class="google">
+          <a href="https://plus.google.com"></a>
+        </div>
+        <div class="linked_in">
+          <a href="http://www.linkedin.co.uk"></a>
+        </div>
       </div>
 
       <div class="colleague">
         <img src="images/colleague_4.gif" alt="Profile Picture">
         <h1>Colleague 4</h1>
         <h3>Job Title</h3>
-        <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
-        <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
-        <a href="" class="facebook"></a>
-        <a href="" class="twitter"></a>
-        <a href="" class="google"></a>
-        <a href="" class="linked_in"></a>
+        <p class="mail">
+          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+        </p>
+        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+        <div class="facebook">
+          <a href="http://www.facebook.com"></a>
+        </div>
+        <div class="twitter">
+          <a href="http://www.twitter.com"></a>
+        </div>
+        <div class="google">
+          <a href="https://plus.google.com"></a>
+        </div>
+        <div class="linked_in">
+          <a href="http://www.linkedin.co.uk"></a>
+        </div>
       </div>
 
       <div class="colleague">
-        <img src="images/colleague_4.gif" alt="Profile Picture">
+        <img src="images/colleague_5.gif" alt="Profile Picture">
         <h1>Colleague 5</h1>
         <h3>Job Title</h3>
-        <p class="mail"><i class="fa fa-envelope"></i>email@capgemini.com</p>
-        <p class="phone"><i class="fa fa-phone"></i>Telephone</p>
-        <a href="" class="facebook"></a>
-        <a href="" class="twitter"></a>
-        <a href="" class="google"></a>
-        <a href="" class="linked_in"></a>
+        <p class="mail">
+          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+        </p>
+        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+        <div class="facebook">
+          <a href="http://www.facebook.com"></a>
+        </div>
+        <div class="twitter">
+          <a href="http://www.twitter.com"></a>
+        </div>
+        <div class="google">
+          <a href="https://plus.google.com"></a>
+        </div>
+        <div class="linked_in">
+          <a href="http://www.linkedin.co.uk"></a>
+        </div>
       </div>
     </div>
   </div>
