lables for checkboxes

--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
             </select>
             <table>
               <tr>
-                <td><input type="checkbox" name="languages" value="HTML"></td>
+                <td><input type="checkbox" id="HTML" name="HTML" /></td>
                 <td><label for="HTML">HTML</label></td>
-                <td><input type="checkbox" name="languages" value="JavaScript"></td>
+                <td><input type="checkbox" id="JavaScript" name="JavaScript" /></td>
                 <td><label for="JavaScript">JavaScript</label></td>
-                <td><input type="checkbox" name="languages" value="Python"></td>
+                <td><input type="checkbox" id="Python" name="Python" /></td>
                 <td><label for="Python">Python</label></td>
-                <td><input type="checkbox" name="languages" value="Java"></td>
+                <td><input type="checkbox" id="Java" name="Java" /></td>
                 <td><label for="Java">Java</label></td>
               </tr>
               <tr>
-                <td><input type="checkbox" name="languages" value="CSS"></td>
+              <td><input type="checkbox" id="CSS" name="CSS" /></td>
                 <td><label for="CSS">CSS</label></td>
-                <td><input type="checkbox" name="languages" value="PHP"></td>
+                <td><input type="checkbox" id="PHP" name="PHP" /></td>
                 <td><label for="PHP">PHP</label></td>
-                <td><input type="checkbox" name="languages" value="SQL"></td>
+                <td><input type="checkbox" id="SQL" name="SQL" /></td>
                 <td><label for="SQL">SQL</label></td>
-                <td><input type="checkbox" name="languages" value="C++"></td>
+                <td><input type="checkbox" id="C++" name="C++" /></td>
                 <td><label for="C++">C++</label></td>
               </tr>
             </table>
