--- a/index.html
+++ b/index.html
@@ -1,223 +1,223 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-  <title>Innovation Identity</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <title>Innovation Identity</title>
+  </head>
+  <body>
+    <header>
+      <h1>
+        Innovation Identity
+      </h1>
+    </header>
 
-<header>
-  <h1>
-    Innovation Identity
-  </h1>
-</header>
+      <div class="main">
+        <div class="profile">
+          <div class="personal_id">
+            <img src="images/profile_pic.gif" alt="Profile Picture"/>
+            <h1>Ed De Mott</h1>
+            <h3>Developer</h3>
+            <p class="mail">
+              <a href="mailto:edward.de-mott@capgemini.com"><i class="fa fa-envelope"></i>edward.de-mott@capgemini.com</a> 
+            </p>
+            <p class="phone"><i class="fa fa-phone"></i>07810884120</p>
+            <div class="facebook">
+              <a href="http://www.facebook.com"></a>
+            </div>
+            <div class="twitter">
+              <a href="http://www.twitter.com"></a>
+            </div>
+            <div class="google">
+              <a href="https://plus.google.com"></a>
+            </div>
+            <div class="linked_in">
+              <a href="http://www.linkedin.co.uk"></a>
+            </div>
+          </div>
+          <div class="back_g">
+            <div class="hobbies">
+              <h2>Hobbies/Interests</h2>
+              <ul>
+                <li>Hobby A</li>
+                <li>Hobby B</li>
+                <li>Hobby C</li>
+                <li>Hobby D</li>
+              </ul>
+            </div>
 
-<body>
-  <div class="main">
-    <div class="profile">
-      <div class="personal_id">
-        <img src="images/profile_pic.gif" alt="Profile Picture"/>
-        <h1>Ed De Mott</h1>
-        <h3>Developer</h3>
-        <p class="mail">
-          <a href="mailto:edward.de-mott@capgemini.com"><i class="fa fa-envelope"></i>edward.de-mott@capgemini.com</a> 
-        </p>
-        <p class="phone"><i class="fa fa-phone"></i>07810884120</p>
-        <div class="facebook">
-          <a href="http://www.facebook.com"></a>
+            <div class="video">
+              <h2>Favourite Video</h2>
+              <video poster="images/poster.png" controls>
+                <source src="http://video.webmfiles.org/big-buck-bunny_trailer.webm" type="video/webm">
+              </video>
+            </div>
+
+            <div class="details">
+              <h2>Background</h2>
+              <form action="get">
+                <label for="education">Education:</label>
+                <select id="education" name="education">
+                  <option>Primary School</option>
+                  <option>Secondary School</option>
+                  <option>University</option>
+                </select>
+                <table>
+                  <tr>
+                    <td><input type="checkbox" id="HTML" name="HTML" /></td>
+                    <td><label for="HTML">HTML</label></td>
+                    <td><input type="checkbox" id="JavaScript" name="JavaScript" /></td>
+                    <td><label for="JavaScript">JavaScript</label></td>
+                    <td><input type="checkbox" id="Python" name="Python" /></td>
+                    <td><label for="Python">Python</label></td>
+                    <td><input type="checkbox" id="Java" name="Java" /></td>
+                    <td><label for="Java">Java</label></td>
+                  </tr>
+                  <tr>
+                  <td><input type="checkbox" id="CSS" name="CSS" /></td>
+                    <td><label for="CSS">CSS</label></td>
+                    <td><input type="checkbox" id="PHP" name="PHP" /></td>
+                    <td><label for="PHP">PHP</label></td>
+                    <td><input type="checkbox" id="SQL" name="SQL" /></td>
+                    <td><label for="SQL">SQL</label></td>
+                    <td><input type="checkbox" id="C++" name="C++" /></td>
+                    <td><label for="C++">C++</label></td>
+                  </tr>
+                </table>
+                <textarea rows="4" cols="50">Tell us about one of your past projects...</textarea>
+                <br>
+                <input class="button" type="submit" value="OK">
+              </form>
+            </div>
+          </div>
+
+          <div class="joke">
+            <p>
+              <i class="fa fa-quote-left"></i>
+                What happens when an unstoppable force meets an immovable object
+              <i class="fa fa-quote-right"></i>
+            </p>
+          </div>
         </div>
-        <div class="twitter">
-          <a href="http://www.twitter.com"></a>
-        </div>
-        <div class="google">
-          <a href="https://plus.google.com"></a>
-        </div>
-        <div class="linked_in">
-          <a href="http://www.linkedin.co.uk"></a>
+
+        <div class="colleague_list">
+          <div class="colleague">
+            <img src="images/colleague_1.gif" alt="Profile Picture">
+            <h1>Colleague 1</h1>
+            <h3>Job Title</h3>
+            <p class="mail">
+              <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+            </p>
+            <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+            <div class="facebook">
+              <a href="http://www.facebook.com"></a>
+            </div>
+            <div class="twitter">
+              <a href="http://www.twitter.com"></a>
+            </div>
+            <div class="google">
+              <a href="https://plus.google.com"></a>
+            </div>
+            <div class="linked_in">
+              <a href="http://www.linkedin.co.uk"></a>
+            </div>
+          </div>
+
+          <div class="colleague">
+            <img src="images/colleague_2.gif" alt="Profile Picture">
+            <h1>Colleague 2</h1>
+            <h3>Job Title</h3>
+            <p class="mail">
+              <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+            </p>
+            <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+            <div class="facebook">
+              <a href="http://www.facebook.com"></a>
+            </div>
+            <div class="twitter">
+              <a href="http://www.twitter.com"></a>
+            </div>
+            <div class="google">
+              <a href="https://plus.google.com"></a>
+            </div>
+            <div class="linked_in">
+              <a href="http://www.linkedin.co.uk"></a>
+            </div>
+          </div>
+
+          <div class="colleague">
+            <img src="images/colleague_3.gif" alt="Profile Picture">
+            <h1>Colleague 3</h1>
+            <h3>Job Title</h3>
+            <p class="mail">
+              <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+            </p>
+            <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+            <div class="facebook">
+              <a href="http://www.facebook.com"></a>
+            </div>
+            <div class="twitter">
+              <a href="http://www.twitter.com"></a>
+            </div>
+            <div class="google">
+              <a href="https://plus.google.com"></a>
+            </div>
+            <div class="linked_in">
+              <a href="http://www.linkedin.co.uk"></a>
+            </div>
+          </div>
+
+          <div class="colleague">
+            <img src="images/colleague_4.gif" alt="Profile Picture">
+            <h1>Colleague 4</h1>
+            <h3>Job Title</h3>
+            <p class="mail">
+              <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+            </p>
+            <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+            <div class="facebook">
+              <a href="http://www.facebook.com"></a>
+            </div>
+            <div class="twitter">
+              <a href="http://www.twitter.com"></a>
+            </div>
+            <div class="google">
+              <a href="https://plus.google.com"></a>
+            </div>
+            <div class="linked_in">
+              <a href="http://www.linkedin.co.uk"></a>
+            </div>
+          </div>
+
+          <div class="colleague">
+            <img src="images/colleague_5.gif" alt="Profile Picture">
+            <h1>Colleague 5</h1>
+            <h3>Job Title</h3>
+            <p class="mail">
+              <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
+            </p>
+            <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
+            <div class="facebook">
+              <a href="http://www.facebook.com"></a>
+            </div>
+            <div class="twitter">
+              <a href="http://www.twitter.com"></a>
+            </div>
+            <div class="google">
+              <a href="https://plus.google.com"></a>
+            </div>
+            <div class="linked_in">
+              <a href="http://www.linkedin.co.uk"></a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="back_g">
-        <div class="hobbies">
-          <h2>Hobbies/Interests</h2>
-          <ul>
-            <li>Hobby A</li>
-            <li>Hobby B</li>
-            <li>Hobby C</li>
-            <li>Hobby D</li>
-          </ul>
-        </div>
 
-        <div class="video">
-          <h2>Favourite Video</h2>
-          <video poster="images/poster.png" controls>
-            <source src="http://video.webmfiles.org/big-buck-bunny_trailer.webm" type="video/webm">
-          </video>
-        </div>
-
-        <div class="details">
-          <h2>Background</h2>
-          <form action="">
-            <label for="education">Education:</label>
-            <select name="education">
-              <option>Primary School</option>
-              <option>Secondary School</option>
-              <option>University</option>
-            </select>
-            <table>
-              <tr>
-                <td><input type="checkbox" id="HTML" name="HTML" /></td>
-                <td><label for="HTML">HTML</label></td>
-                <td><input type="checkbox" id="JavaScript" name="JavaScript" /></td>
-                <td><label for="JavaScript">JavaScript</label></td>
-                <td><input type="checkbox" id="Python" name="Python" /></td>
-                <td><label for="Python">Python</label></td>
-                <td><input type="checkbox" id="Java" name="Java" /></td>
-                <td><label for="Java">Java</label></td>
-              </tr>
-              <tr>
-              <td><input type="checkbox" id="CSS" name="CSS" /></td>
-                <td><label for="CSS">CSS</label></td>
-                <td><input type="checkbox" id="PHP" name="PHP" /></td>
-                <td><label for="PHP">PHP</label></td>
-                <td><input type="checkbox" id="SQL" name="SQL" /></td>
-                <td><label for="SQL">SQL</label></td>
-                <td><input type="checkbox" id="C++" name="C++" /></td>
-                <td><label for="C++">C++</label></td>
-              </tr>
-            </table>
-            <textarea rows="4" cols="50">Tell us about one of your past projects...</textarea>
-            <br>
-            <input class="button" type="submit" value="OK">
-          </form>
-        </div>
-      </div>
-
-      <div class="joke">
-        <p>
-          <i class="fa fa-quote-left"></i>
-            What happens when an unstoppable force meets an immovable object
-          <i class="fa fa-quote-right"></i>
-        </p>
-      </div>
-    </div>
-
-    <div class="colleague_list">
-      <div class="colleague">
-        <img src="images/colleague_1.gif" alt="Profile Picture">
-        <h1>Colleague 1</h1>
-        <h3>Job Title</h3>
-        <p class="mail">
-          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
-        </p>
-        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-        <div class="facebook">
-          <a href="http://www.facebook.com"></a>
-        </div>
-        <div class="twitter">
-          <a href="http://www.twitter.com"></a>
-        </div>
-        <div class="google">
-          <a href="https://plus.google.com"></a>
-        </div>
-        <div class="linked_in">
-          <a href="http://www.linkedin.co.uk"></a>
-        </div>
-      </div>
-
-      <div class="colleague">
-        <img src="images/colleague_2.gif" alt="Profile Picture">
-        <h1>Colleague 2</h1>
-        <h3>Job Title</h3>
-        <p class="mail">
-          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
-        </p>
-        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-        <div class="facebook">
-          <a href="http://www.facebook.com"></a>
-        </div>
-        <div class="twitter">
-          <a href="http://www.twitter.com"></a>
-        </div>
-        <div class="google">
-          <a href="https://plus.google.com"></a>
-        </div>
-        <div class="linked_in">
-          <a href="http://www.linkedin.co.uk"></a>
-        </div>
-      </div>
-
-      <div class="colleague">
-        <img src="images/colleague_3.gif" alt="Profile Picture">
-        <h1>Colleague 3</h1>
-        <h3>Job Title</h3>
-        <p class="mail">
-          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
-        </p>
-        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-        <div class="facebook">
-          <a href="http://www.facebook.com"></a>
-        </div>
-        <div class="twitter">
-          <a href="http://www.twitter.com"></a>
-        </div>
-        <div class="google">
-          <a href="https://plus.google.com"></a>
-        </div>
-        <div class="linked_in">
-          <a href="http://www.linkedin.co.uk"></a>
-        </div>
-      </div>
-
-      <div class="colleague">
-        <img src="images/colleague_4.gif" alt="Profile Picture">
-        <h1>Colleague 4</h1>
-        <h3>Job Title</h3>
-        <p class="mail">
-          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
-        </p>
-        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-        <div class="facebook">
-          <a href="http://www.facebook.com"></a>
-        </div>
-        <div class="twitter">
-          <a href="http://www.twitter.com"></a>
-        </div>
-        <div class="google">
-          <a href="https://plus.google.com"></a>
-        </div>
-        <div class="linked_in">
-          <a href="http://www.linkedin.co.uk"></a>
-        </div>
-      </div>
-
-      <div class="colleague">
-        <img src="images/colleague_5.gif" alt="Profile Picture">
-        <h1>Colleague 5</h1>
-        <h3>Job Title</h3>
-        <p class="mail">
-          <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
-        </p>
-        <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-        <div class="facebook">
-          <a href="http://www.facebook.com"></a>
-        </div>
-        <div class="twitter">
-          <a href="http://www.twitter.com"></a>
-        </div>
-        <div class="google">
-          <a href="https://plus.google.com"></a>
-        </div>
-        <div class="linked_in">
-          <a href="http://www.linkedin.co.uk"></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-<footer>
-  <p>
-    Created by Ed De Mott
-  </p>
-</footer>
+    <footer>
+      <p>
+        Created by Ed De Mott
+      </p>
+    </footer>
+  </body>
 </html>
