--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
               <a href="mailto:edward.de-mott@capgemini.com"><i class="fa fa-envelope"></i>edward.de-mott@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>07810884120</p>
-            <div class="facebook">
-              <a href="http://www.facebook.com"></a>
-            </div>
-            <div class="twitter">
-              <a href="http://www.twitter.com"></a>
-            </div>
-            <div class="google">
-              <a href="https://plus.google.com"></a>
-            </div>
-            <div class="linked_in">
-              <a href="http://www.linkedin.co.uk"></a>
-            </div>
+            <ul>
+              <li class="facebook">
+                <a href="http://www.facebook.com"></a>
+              </li>
+              <li class="twitter">
+                <a href="http://www.twitter.com"></a>
+              </li>
+              <li class="google">
+                <a href="https://plus.google.com"></a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.co.uk"></a>
+              </li>
+            </ul>
           </div>
           <div class="back_g">
             <div class="hobbies">
