removed some divs, used lists items

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           </div>
         </div>
 
-        <div class="colleague_list">
-          <div class="colleague">
+        <ul class="colleague_list">
+          <li class="colleague">
             <img src="images/colleague_1.gif" alt="Profile Picture">
             <h1>Colleague 1</h1>
             <h3>Job Title</h3>
@@ -112,21 +112,23 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <div class="facebook">
-              <a href="http://www.facebook.com"></a>
-            </div>
-            <div class="twitter">
-              <a href="http://www.twitter.com"></a>
-            </div>
-            <div class="google">
-              <a href="https://plus.google.com"></a>
-            </div>
-            <div class="linked_in">
-              <a href="http://www.linkedin.co.uk"></a>
-            </div>
-          </div>
+            <ul>
+              <li class="facebook">
+                <a href="http://www.facebook.com"></a>
+              </li>
+              <li class="twitter">
+                <a href="http://www.twitter.com"></a>
+              </li>
+              <li class="google">
+                <a href="https://plus.google.com"></a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.co.uk"></a>
+              </li>
+            </ul>
+          </li>
 
-          <div class="colleague">
+          <li class="colleague">
             <img src="images/colleague_2.gif" alt="Profile Picture">
             <h1>Colleague 2</h1>
             <h3>Job Title</h3>
@@ -134,21 +136,23 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <div class="facebook">
-              <a href="http://www.facebook.com"></a>
-            </div>
-            <div class="twitter">
-              <a href="http://www.twitter.com"></a>
-            </div>
-            <div class="google">
-              <a href="https://plus.google.com"></a>
-            </div>
-            <div class="linked_in">
-              <a href="http://www.linkedin.co.uk"></a>
-            </div>
-          </div>
+            <ul>
+              <li class="facebook">
+                <a href="http://www.facebook.com"></a>
+              </li>
+              <li class="twitter">
+                <a href="http://www.twitter.com"></a>
+              </li>
+              <li class="google">
+                <a href="https://plus.google.com"></a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.co.uk"></a>
+              </li>
+            </ul>
+          </li>
 
-          <div class="colleague">
+          <li class="colleague">
             <img src="images/colleague_3.gif" alt="Profile Picture">
             <h1>Colleague 3</h1>
             <h3>Job Title</h3>
@@ -156,21 +160,23 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <div class="facebook">
-              <a href="http://www.facebook.com"></a>
-            </div>
-            <div class="twitter">
-              <a href="http://www.twitter.com"></a>
-            </div>
-            <div class="google">
-              <a href="https://plus.google.com"></a>
-            </div>
-            <div class="linked_in">
-              <a href="http://www.linkedin.co.uk"></a>
-            </div>
-          </div>
+            <ul>
+              <li class="facebook">
+                <a href="http://www.facebook.com"></a>
+              </li>
+              <li class="twitter">
+                <a href="http://www.twitter.com"></a>
+              </li>
+              <li class="google">
+                <a href="https://plus.google.com"></a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.co.uk"></a>
+              </li>
+            </ul>
+          </li>
 
-          <div class="colleague">
+          <li class="colleague">
             <img src="images/colleague_4.gif" alt="Profile Picture">
             <h1>Colleague 4</h1>
             <h3>Job Title</h3>
@@ -178,21 +184,23 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <div class="facebook">
-              <a href="http://www.facebook.com"></a>
-            </div>
-            <div class="twitter">
-              <a href="http://www.twitter.com"></a>
-            </div>
-            <div class="google">
-              <a href="https://plus.google.com"></a>
-            </div>
-            <div class="linked_in">
-              <a href="http://www.linkedin.co.uk"></a>
-            </div>
-          </div>
+            <ul>
+              <li class="facebook">
+                <a href="http://www.facebook.com"></a>
+              </li>
+              <li class="twitter">
+                <a href="http://www.twitter.com"></a>
+              </li>
+              <li class="google">
+                <a href="https://plus.google.com"></a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.co.uk"></a>
+              </li>
+            </ul>
+          </li>
 
-          <div class="colleague">
+          <li class="colleague">
             <img src="images/colleague_5.gif" alt="Profile Picture">
             <h1>Colleague 5</h1>
             <h3>Job Title</h3>
@@ -200,20 +208,22 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <div class="facebook">
-              <a href="http://www.facebook.com"></a>
-            </div>
-            <div class="twitter">
-              <a href="http://www.twitter.com"></a>
-            </div>
-            <div class="google">
-              <a href="https://plus.google.com"></a>
-            </div>
-            <div class="linked_in">
-              <a href="http://www.linkedin.co.uk"></a>
-            </div>
-          </div>
-        </div>
+            <ul>
+              <li class="facebook">
+                <a href="http://www.facebook.com"></a>
+              </li>
+              <li class="twitter">
+                <a href="http://www.twitter.com"></a>
+              </li>
+              <li class="google">
+                <a href="https://plus.google.com"></a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.co.uk"></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
 
     <footer>
