improved divs- no fixed height- V2

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         Innovation Identity
       </h1>
     </header>
-
       <div class="main">
         <div class="profile">
+
           <div class="personal_id">
-            <img src="images/profile_pic.gif" alt="Profile Picture"/>
+            <img src="images/colleague_1.gif" alt="Profile Picture">
             <h1>Ed De Mott</h1>
             <h3>Developer</h3>
             <p class="mail">
               <a href="mailto:edward.de-mott@capgemini.com"><i class="fa fa-envelope"></i>edward.de-mott@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>07810884120</p>
-            <ul>
+            <ul class="social_links">
               <li class="facebook">
                 <a href="http://www.facebook.com"></a>
               </li>
@@ -38,8 +38,8 @@
               </li>
             </ul>
           </div>
-          <div class="back_g">
-            <div class="hobbies">
+          <ul class="back_g">
+            <li class="hobbies">
               <h2>Hobbies/Interests</h2>
               <ul>
                 <li>Hobby A</li>
@@ -47,16 +47,16 @@
                 <li>Hobby C</li>
                 <li>Hobby D</li>
               </ul>
-            </div>
+            </li>
 
-            <div class="video">
+            <li class="video">
               <h2>Favourite Video</h2>
               <video poster="images/poster.png" controls>
                 <source src="http://video.webmfiles.org/big-buck-bunny_trailer.webm" type="video/webm">
               </video>
-            </div>
+            </li>
 
-            <div class="details">
+            <li class="details">
               <h2>Background</h2>
               <form action="get">
                 <label for="education">Education:</label>
@@ -91,8 +91,8 @@
                 <br>
                 <input class="button" type="submit" value="OK">
               </form>
-            </div>
-          </div>
+            </li>
+          </ul>
 
           <div class="joke">
             <p>
@@ -102,7 +102,6 @@
             </p>
           </div>
         </div>
-
         <ul class="colleague_list">
           <li class="colleague">
             <img src="images/colleague_1.gif" alt="Profile Picture">
@@ -112,7 +111,7 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <ul>
+            <ul class="social_links">
               <li class="facebook">
                 <a href="http://www.facebook.com"></a>
               </li>
@@ -127,7 +126,6 @@
               </li>
             </ul>
           </li>
-
           <li class="colleague">
             <img src="images/colleague_2.gif" alt="Profile Picture">
             <h1>Colleague 2</h1>
@@ -136,7 +134,7 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <ul>
+            <ul class="social_links">
               <li class="facebook">
                 <a href="http://www.facebook.com"></a>
               </li>
@@ -151,7 +149,6 @@
               </li>
             </ul>
           </li>
-
           <li class="colleague">
             <img src="images/colleague_3.gif" alt="Profile Picture">
             <h1>Colleague 3</h1>
@@ -160,7 +157,7 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <ul>
+            <ul class="social_links">
               <li class="facebook">
                 <a href="http://www.facebook.com"></a>
               </li>
@@ -175,7 +172,6 @@
               </li>
             </ul>
           </li>
-
           <li class="colleague">
             <img src="images/colleague_4.gif" alt="Profile Picture">
             <h1>Colleague 4</h1>
@@ -184,7 +180,7 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <ul>
+            <ul class="social_links">
               <li class="facebook">
                 <a href="http://www.facebook.com"></a>
               </li>
@@ -199,7 +195,6 @@
               </li>
             </ul>
           </li>
-
           <li class="colleague">
             <img src="images/colleague_5.gif" alt="Profile Picture">
             <h1>Colleague 5</h1>
@@ -208,7 +203,7 @@
               <a href="mailto:"><i class="fa fa-envelope"></i>email@capgemini.com</a> 
             </p>
             <p class="phone"><i class="fa fa-phone"></i>0123456789</p>
-            <ul>
+            <ul class="social_links">
               <li class="facebook">
                 <a href="http://www.facebook.com"></a>
               </li>
@@ -225,8 +220,7 @@
           </li>
         </ul>
       </div>
-
-    <footer>
+      <footer>
       <p>
         Created by Ed De Mott
       </p>
